test/fixtures/typecheck/pass/T1.kite
module T1

type Maybe a { Just a, Nothing }

fromMaybe : Maybe a -> a -> a {
  match {
    Just x, _ -> x,
    _,      y -> y
  }
}

leftJoin : Maybe a -> Maybe a -> Maybe a {
  match {
    Just x, _   -> Just x,
    Nothing,  y -> y
  }
}
