test/fixtures/typecheck/fail/UnknownConstructor.kite
module UnknownDataType

fromMaybe : Maybe a -> a -> a {
  match {
    Just x, _ -> x,
    _, y -> y
  }
}
